# parallelism

./: README.md
task1/cmake/: CMakeLists.txt
task1/make/: Makefile  main.cpp
